fixed overflow layout

--- a/styles/globalstyles.css
+++ b/styles/globalstyles.css
@@ -4,6 +4,9 @@ body{
     /* width:100vh; */
     overflow-x: hidden;
 }
+*{
+
+}
 /* Navbar Styling */
 nav{
     /* background-color: white; */
@@ -90,8 +93,11 @@ nav p{
 
 
 .headSkills{
-    width: 500px;
+   
     margin: 30px 0;
+}
+.secondSkills{
+    width:500px;
 }
 .skillsTab{
     float:left;
@@ -162,5 +168,11 @@ nav p{
 }
 .skillsTab{
     margin: 0 5px;
+}
+.headSkills{
+    width:250px;
+}
+.secondSkills{
+    width:200px;
 }
 }
